fixed some issues